payment service dome

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
+# razorpay config
+
+razorpay.key=rzp_test_Lo1FyHCZRtjfN5
+razorpay.secrect=${RAZORPAY_SECRET}
+
 # enviroment config
 spring.profiles.active=dev
 
