--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,5 @@ razorpay.key=rzp_test_Lo1FyHCZRtjfN5
 razorpay.secrect=${RAZORPAY_SECRET}
 
 # enviroment config
-spring.profiles.active=dev
+spring.profiles.active=prod
 
