--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
 
 #data base config
- spring.datasource.url=jdbc:mysql://containers-us-west-123.railway.app:3306/railway
+spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:58663/railway
 spring.datasource.username=root
-spring.datasource.password=PtwnNbvSuGipShUqGpFUntpQDfSDgrCe
+spring.datasource.password=${DATABASE_PASSWORD}
+
+
 
 
