--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 
 #data base config
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:58663/railway
+spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:12406/railway
 spring.datasource.username=root
 spring.datasource.password=${DATABASE_PASSWORD}
+
 
 
 
